--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "discord-bots-rpc"]
 	path = discord-bots-rpc
-	url = fvlaenix-github:fvlaenix/discord-bots-rpc.git
+	url = git@github.com:fvlaenix/discord-bots-rpc.git
