--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,6 +18,8 @@ jobs:
 
     - name: Check out code
       uses: actions/checkout@v3
+      with:
+        submodules: true
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
