--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ bin/
 /src/main/resources/*_EN.properties
 /src/main/resources/*_RU.properties
 /src/main/resources/prompt_*.txt
+/src/main/resources/summarizer-prompt.txt
